# demo_descartes

plan_and_run/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
plan_and_run/config/: demo_config.rviz
plan_and_run/include/plan_and_run/: demo_application.h
plan_and_run/launch/: demo_run.launch
plan_and_run/src/: demo_application.cpp  generate_lemniscate_trajectory.py  plan_and_run_node.cpp
ur5_demo_moveit_config/: .setup_assistant
ur5_demo_moveit_config/config/: kinematics.yaml  ur5_demo.srdf
ur5_demo_support/urdf/: ur5_demo_robot.xacro
